--- a/404.html
+++ b/404.html
@@ -4,19 +4,19 @@
 <head>
   <meta charset="utf-8"> <meta name="description" content="">
 
- <link rel="shortcut icon" href="/https/ade9527.github.io/images/favicon.png" type="image/x-icon" />
-<link rel="icon" href="/https/ade9527.github.io/images/favicon.png" type="image/x-icon" /> 
+ <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon" />
+<link rel="icon" href="/images/favicon.png" type="image/x-icon" /> 
   <title>404 Page not found</title>
   
    
-    <link href="/https/ade9527.github.io/css/nucleus.css?1535376715" rel="stylesheet">
-    <link href="/https/ade9527.github.io/css/font-awesome.min.css?1535376715" rel="stylesheet">
-    <link href="/https/ade9527.github.io/css/hybrid.css?1535376715" rel="stylesheet">
-    <link href="/https/ade9527.github.io/css/featherlight.min.css?1535376715" rel="stylesheet">
-    <link href="/https/ade9527.github.io/css/perfect-scrollbar.min.css?1535376715" rel="stylesheet">
-    <link href="/https/ade9527.github.io/css/horsey.css?1535376715" rel="stylesheet">
-    <link href="/https/ade9527.github.io/css/theme.css?1535376715" rel="stylesheet">
-    <link href="/https/ade9527.github.io/css/hugo-theme.css?1535376715" rel="stylesheet">
+    <link href="/css/nucleus.css?1535377675" rel="stylesheet">
+    <link href="/css/font-awesome.min.css?1535377675" rel="stylesheet">
+    <link href="/css/hybrid.css?1535377675" rel="stylesheet">
+    <link href="/css/featherlight.min.css?1535377675" rel="stylesheet">
+    <link href="/css/perfect-scrollbar.min.css?1535377675" rel="stylesheet">
+    <link href="/css/horsey.css?1535377675" rel="stylesheet">
+    <link href="/css/theme.css?1535377675" rel="stylesheet">
+    <link href="/css/hugo-theme.css?1535377675" rel="stylesheet">
     
 <style type="text/css">
     :root #header + #content > #left > #rlblock_left {
@@ -49,8 +49,8 @@
           </p>
           <p>Woops. Looks like this page doesn&#39;t exist ¯\_(ツ)_/¯.</p>
           <p></p>
-          <p><a href='/https/ade9527.github.io/'>Go to homepage</a></p>
-          <p><img src='/https/ade9527.github.io/images/gopher-404.jpg' style="width:50%"></img></p>
+          <p><a href='/'>Go to homepage</a></p>
+          <p><img src='/images/gopher-404.jpg' style="width:50%"></img></p>
         </div>
       </div>
 
