--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="https//ade9527.github.io/css/styles.css">
   
-  <link href="/index.xml" rel="alternate" type="application/rss+xml" title="王正华的博客" />
+  <link href="https//ade9527.github.io/index.xml" rel="alternate" type="application/rss+xml" title="王正华的博客" />
 
 </head>
 <body>
@@ -23,7 +23,7 @@
     Kraiklyn
 </div>
 
-        <h1 class="site-title"><a href="">王正华的博客</a></h1>
+        <h1 class="site-title"><a href="https//ade9527.github.io/">王正华的博客</a></h1>
 
 
         <nav class="internal">
